--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "secure-webhook",
-  "version": "0.1.3",
+  "version": "0.3.0",
   "description": "Github Actions secure webhook",
-  "main": "main.js",
+  "main": "src/index.js",
   "scripts": {
     "dev": "node -r dotenv/config src/index.js",
     "build": "ncc build src/index.js -o dist"
