feat(timeout): default timeout value is 0

--- a/example.env
+++ b/example.env
@@ -1,5 +1,5 @@
-INPUT_HMACSECRET=23123LMP29R3N123KE12EU21092D
+INPUT_HMACSECRET=YU123LMP29R3N123KE12EU21092D4V4VD
 INPUT_DATA={"name":"test"}
 INPUT_TIMEOUT=5000
-INPUT_URL=http://localhost:80
+INPUT_URL=http://127.0.0.1:80
 GITHUB_SHA=testtesttest
